# sally

./: .clang-format  CMakeLists.txt  Makefile  README.md
include/: builtin.h  compiler.h  error.h  interpreter.h  lexer.h  parser.h  string_arena.h
src/: compiler.c  error.c  interpreter.c  lexer.c  main.c  parser.c  string_arena.c
